--- a/src/scss/modules/generics.scss
+++ b/src/scss/modules/generics.scss
@@ -17,3 +17,10 @@
 .padding-right-half-em {
   padding-right: 0.5em;
 }
+
+.center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateY(-50%) translateX(-50%);
+}
